# pyycam

./: .gitignore  DESCRIPTION.md  Dockerfile  Makefile  Procfile  README.md  build.sh  docker-compose-deploy.yml  docker-compose.yml  render.yaml  requirements.txt
.github/worflows/: checks.yml  test-and-lint.yml
infra/: docker-compose.yml
infra/deploy/: main.tf  variabales.tf
infra/setup/: ecr.tf  iam.tf  main.tf  variable.tf
pycam/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dockercompose.yml  dockerfile  gunicorn_config.py  manage.py  pyproject.toml  render.yaml  requirements.txt  run.sh  run_with_postgres.sh  rundev.sh  setup.cfg
pycam/editor/: admin.py  effects.py  forms.py  models.py  tests.py  urls.py  views.py
pycam/editor/management/: __init__.py
pycam/editor/management/commands/: db_healthcheck.py  update_site.py
pycam/editor/migrations/: 0001_initial.py
pycam/editor/test/: test_views.py
pycam/pycam/: asgi.py  db_backends.py  middleware.py  render_settings.py  settings.py  urls.py  wsgi.py
pycam/static/css/: base.css  homepage.css  hompage.css  login.css  responsive.css
pycam/static/js/: base.js  main.js
pycam/templates/: base.html  homepage.html  login.html
pycam/templates/account/: logout.html
